test_scores/negative_dimers/features/Q14847.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/Q14847.pkl.xz